[project]
name = "wt"
version = "0.1.0"
description = "Git worktree manager with interactive selection UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "InquirerPy>=0.3.4",
]

[project.scripts]
wt = "wt.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wt"]

# Linting & Formatting
[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "PL",     # pylint
    "DTZ",    # flake8-datetimez
    "RUF",    # ruff-specific rules
    "FURB",   # refurb
    "PERF",   # perflint
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TC",     # flake8-type-checking
    "PT",     # flake8-pytest-style
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
]
ignore = [
    "E501",     # line too long (black handles this)
    "PLR0912",  # too-many-branches
    "PLR0915",  # too-many-statements
    "PLR0913",  # too-many-arguments
    "TC001",    # type-checking block
    "TC003",    # type-checking block - standard library
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
enable_error_code = ["unused-awaitable"]

[[tool.mypy.overrides]]
module = "InquirerPy.*"
ignore_missing_imports = true

# Pixi
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
wt = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.11.*"
click = ">=8.3.1,<9"
simple-term-menu = ">=1.6.6,<2"
pip = ">=25.3,<26"
black = ">=25.1.0,<26"
ruff = ">=0.14.7,<0.15"
mypy = ">=1.19.0,<2"
inquirerpy = ">=0.3.4,<0.4"

[tool.pixi.tasks]
# Formatting
fmt = { cmd = "black src", description = "Format code with black" }
fmt-check = { cmd = "black --check src", description = "Check black formatting" }

# Linting
ruff-fix = { cmd = "ruff check --fix src", depends-on = ["fmt"], description = "Run ruff with auto-fix" }
ruff-check = { cmd = "ruff check src", description = "Check ruff linting" }

# Type checking
typecheck = { cmd = "dmypy run src", description = "Run mypy (daemon)" }
typecheck-ci = { cmd = "mypy src", description = "Run mypy (full check)" }

# Combined tasks
cleanup = { depends-on = ["fmt", "ruff-fix", "typecheck"], description = "Run all linters with auto-fix" }
lint = { depends-on = ["fmt-check", "ruff-check", "typecheck-ci"], description = "Check all linters (no fix)" }
ci = { depends-on = ["lint"], description = "Run CI checks" }

# Build
build = { cmd = "pip wheel . -w dist --no-deps", description = "Build wheel" }
build-bin = { cmd = "PYAPP_PROJECT_PATH=\"$PWD/dist/wt-0.1.0-py3-none-any.whl\" PYAPP_EXEC_SPEC=\"wt.cli:cli\" PYAPP_DISTRIBUTION_EMBED=1 PYAPP_UPGRADE_VIRTUALENV=1 cargo install pyapp --force --root build", description = "Build binary with PyApp", depends-on = ["build"] }

# Install
install = { cmd = "cp build/bin/pyapp $HOME/.local/bin/wt && chmod +x $HOME/.local/bin/wt && $HOME/.local/bin/wt self restore", description = "Install wt to ~/.local/bin", depends-on = ["build-bin"] }

# Clean
clean = { cmd = "rm -rf dist build .mypy_cache .ruff_cache", description = "Clean build artifacts" }
